<resources>
    <string name="app_name">时光迭代一</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="tab_menu_task">任务</string>
    <string name="tab_menu_tomato">番茄</string>
    <string name="tab_menu_custom">习惯</string>
    <string name="tab_menu_setting">设置</string>
    <string name="send_test">Send Broadcast!</string>
    <string name="btn_login">登录</string>
    <string name="lo_title">登录</string>
    <string name="account">用户名/邮箱</string>
    <string name="re_title">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="mail_box">邮箱</string>
    <string name="complete">完成</string>
    <string name="re_note">注册账号</string>
    <string name="for_pwd_note">忘记密码</string>
    <string name="send_ver">获取验证码</string>
    <string name="miss_note">请输入您注册时的邮箱</string>
    <string name="mi_title">找回密码</string>
    <string name="reset_password">重置密码</string>
    <string name="newpassword">新密码</string>
    <string name="verifypassword">确认密码</string>
    <string name="determine">确定</string>
</resources>
