<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_mi_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/mi_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:padding="30dp">
         <TextView
            android:id="@+id/tv_mi_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:text="@string/miss_note" />
        <EditText
            android:id="@+id/et_mi_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="@string/mail_box" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/btn_mi"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:text="@string/send_ver"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_mi_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"/>


     </LinearLayout>


</LinearLayout>
