<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:orientation="horizontal">
    <ImageView
        android:id="@+id/iv_lo_back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/back"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/lo_title"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="40dp"/>
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:background="#000000"/>
<RelativeLayout
    android:id="@+id/RL_lo"
    android:padding="30dp"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="9">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pwd_layout">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/user" />
        <EditText
            android:id="@+id/et_lo_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/account"
            android:layout_above="@+id/et_re_email"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/pwd_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_lo">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toLeftOf="@+id/et_re_pwd"
            android:background="@drawable/pwd"/>

        <EditText
            android:id="@+id/et_lo_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_centerInParent="true"/>


    </LinearLayout>


    <Button
        android:id="@+id/btn_lo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/btn_login"/>


    <TextView
        android:id="@+id/tv_lo_for_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/btn_lo"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/btn_lo"
        android:text="@string/for_pwd_note"
        android:textColor="#20D1FF" />
    <TextView
        android:id="@+id/tv_lo_reg_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/btn_lo"
        android:layout_below="@id/btn_lo"
        android:text="@string/re_note"
        android:textColor="#20D1FF"/>

</RelativeLayout>

</LinearLayout>
