<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_re_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/back"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/re_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="40dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000"/>
    <RelativeLayout
        android:id="@+id/RL_re"
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/mail_layout">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/user" />
            <EditText
                android:id="@+id/et_re_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/user_name"
                android:layout_above="@+id/et_re_email"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/pwd_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toLeftOf="@+id/et_re_pwd"
                android:background="@drawable/pwd"/>

            <EditText
                android:id="@+id/et_re_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_centerInParent="true"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/mail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/pwd_layout">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/email"/>



        <EditText
            android:id="@+id/et_re_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:hint="@string/mail_box"
            android:layout_above="@id/et_re_pwd"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pwd_layout"
            android:text="@string/complete"/>



    </RelativeLayout>
    
</LinearLayout>
